--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -164,3 +164,12 @@ body {
 .input-group input {
   padding-left: 35px; /* Adjust based on the width of the icon */
 }
+
+.hide-scrollbar {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
